Fix menu button colour Fix menu button colour for current page when menu is visible and dropped down

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -78,7 +78,7 @@ header #service-name {
     order: 3;
   }
 
-  .govuk-notification-banner__content > * {
+  .govuk-notification-banner__content>* {
     max-width: 44em;
   }
 }
@@ -105,5 +105,11 @@ header #service-name {
     @include govuk-media-query($until: tablet) {
       padding-top: govuk-spacing(4);
     }
+  }
+}
+
+@media (max-width: 61.875em) {
+  .dfe-header__navigation-item.dfe-header__navigation-item--current a {
+    color: govuk-colour('black');
   }
 }
